--- a/src/styles/estilos.css
+++ b/src/styles/estilos.css
@@ -2,7 +2,13 @@ body{
   margin: 0;
   padding: 0;
 }
+nav{
+  width: 100%;
+  max-width: 100%;
+  
+}
 nav ul{
+  
   display: block;
   margin: auto;
 }
@@ -18,13 +24,16 @@ nav ul{
 .menu ul li{
   display: inline;
   position: relative;
+  
+  width: 100%;
 }
 .menu ul li a{
   display: inline-block;
   color: black;
   text-decoration: none;
-  padding: 20px;
+  padding: 40px;
   transition: all .3s;
+  
 }
 .menu ul li a:hover{
   background-color: #ADFF2F;
