--- a/src/styles/cursos.css
+++ b/src/styles/cursos.css
@@ -1,47 +1,35 @@
-body{
-  background-color: #ddd;
-}
 .cursos{
-  display: grid;
-  grid-template-columns: 0.5fr 140px minmax(300px, 800px) 1fr;
-  max-width: 100%;
-}
-.cursoTitulo{
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-size: 5rem;
-  line-height: 1;
-  font-weight: 400;
-  margin-bottom: 1rem;
-  grid-column: 2/5;
-  text-transform: uppercase;
-}
-
-.descricao{
-  grid-column: 2/4;
-  font-size: 1.5rem;
-  margin-top: 0px;
-  
-  margin-right: 20px;
-
-  padding: 20px;
-  
-}
-img{
   display: block;
-  max-width: 100%;
-  
+  margin: 10 auto;
 }
-.foto{
-    background: red;
+.cursos h1{
+  margin: 20px;
+  font-size: 50px;
+}
+.cursos .tp{
+  display: flex;
+  margin: 20px;
+  margin-bottom: 1;
+  max-width: 100%;
+}
+.cursos .tp p{
+  font-size: 20px;
+  text-align: justify;
+  margin: 10px;
+}
+@media (max-width: 700px){
+  .cursos{
+    width: 100%;
     
-    animation: go-back 3s;
   }
-  
-@keyframes go-back {
-  from {
-    transform: translateX(300px);
+  .cursos .tp{
+    display: block;
+    margin: 0;
   }
-  to {
-    transform: translateX(0);
+  .cursos .tp img{
+    align-items: top;
+    align-content: top;
+    width: 100%;
+    margin: 0;
   }
 }
