--- a/src/styles/estilos.css
+++ b/src/styles/estilos.css
@@ -1,14 +1,15 @@
-body{
+html,body{
+  width: 100%;
+  height: 100%;
+  background-color: #Ddd;
   margin: 0;
   padding: 0;
 }
 nav{
   width: 100%;
   max-width: 100%;
-  
 }
 nav ul{
-  
   display: block;
   margin: auto;
 }
@@ -52,4 +53,16 @@ nav ul{
 }
 .menu ul ul li a{
   display: block;
+}
+
+
+@media (max-width: 700px) {
+  nav{
+    width: 100%;
+    right: 0;
+    left: 0;
+  }
+  nav ul li{
+    display: block;
+  }
 }
