--- a/src/styles/Eventos.css
+++ b/src/styles/Eventos.css
@@ -1,9 +1,23 @@
+html{
+  scroll-behavior: smooth;
+  max-width: 100%;
+  width: 100%;
+}
 .eventos{
-  display: grid;
-  grid-template-columns: 50px 2fr 1.2fr;
-  margin: 1rem;
+  margin: 5%;
+  margin-bottom: 0;
 }
-h1{
-  grid-column: 2/5;
+.eventos h1{
+  font-size: 2rem;
+  margin-top: 0;
+  margin-bottom: 1px;
 }
-.eventos div{}
+.eventos h2{
+  font-size: 1.2rem;
+  margin: 0;
+  margin-top: 5px;
+}
+p{
+  margin: 0px;
+  margin-top: 10px;
+}
